--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -6,36 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aplasta el topo</title>
     <link rel="icon" href="img/Mole-Animal-PNG-HD-Quality.png">
-    <link rel="stylesheet" type="text/css" href="style/styles.css"></style>
-    <link href="js/index.js">
+    <link rel="stylesheet" type="text/css" href="style/styles.css">
+    <link rel="stylesheet" href="lib/bootstrap-5.1.3-dist/css/bootstrap.min.css">
+    <script src="lib/bootstrap-5.1.3-dist/js/bootstrap.bundle.min.js"></script>
 </head>
-<body>
-    <h1 class="puntaje">Puntaje:000000</h1>
-    <h1 class="titulo">Aplasta el topo</h1>
-    <div>
-        <row>
-            <img src="img/Mole-Animal-PNG-HD-Quality.png">
-            <img src="img/Mole-Animal-PNG-HD-Quality.png">
-            <img src="img/Mole-Animal-PNG-HD-Quality.png">
-            <img src="img/Mole-Animal-PNG-HD-Quality.png">
-            <img src="img/Mole-Animal-PNG-HD-Quality.png">
-            <img src="img/Mole-Animal-PNG-HD-Quality.png">
-            <img src="img/Mole-Animal-PNG-HD-Quality.png">
-            <img src="img/Mole-Animal-PNG-HD-Quality.png">
-            <img src="img/Mole-Animal-PNG-HD-Quality.png">
-            <img src="img/Mole-Animal-PNG-HD-Quality.png">
-            <img src="img/Mole-Animal-PNG-HD-Quality.png">
-            <img src="img/Mole-Animal-PNG-HD-Quality.png">
-            <img src="img/Mole-Animal-PNG-HD-Quality.png">
-            <img src="img/Mole-Animal-PNG-HD-Quality.png">
-            <img src="img/Mole-Animal-PNG-HD-Quality.png">
-            <img src="img/Mole-Animal-PNG-HD-Quality.png">
-            <img src="img/Mole-Animal-PNG-HD-Quality.png">
-            <img src="img/Mole-Animal-PNG-HD-Quality.png">
-            <img src="img/Mole-Animal-PNG-HD-Quality.png">
-            <img src="img/Mole-Animal-PNG-HD-Quality.png">
-            <img src="img/Mole-Animal-PNG-HD-Quality.png">
-        </row>
+<body class="bodyindex text-white">
+        <div class="row">
+            <div class="col-md-12" id="puntaje">
+                
+            </div>
+            <div class="col-md-12">
+                <h1 class="titulo text-center">Aplasta el topo</h1>
+            </div>
+            <div class="col-md-12 " id="dibujandoTopos">
+            </div>
+        </div>
     </div>
+    <script src="lib/jquery/jquery-3.6.0.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
