--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -6,19 +6,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aplasta el topo</title>
     <link rel="icon" href="img/Mole-Animal-PNG-HD-Quality.png">
-    <link rel="stylesheet" type="text/css" href="style/styles.css">
+    
     <link rel="stylesheet" href="lib/bootstrap-5.1.3-dist/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="style/styles.css">
     <script src="lib/bootstrap-5.1.3-dist/js/bootstrap.bundle.min.js"></script>
 </head>
-<body class="bodyindex text-white">
+<body class="bodyindex text-white ">
         <div class="row">
-            <div class="col-md-12" id="puntaje">
-                
+            <div class="row">
+                <div class="col-md-4 p-4" id="puntaje">
+                </div>
+                <div class="col-md-4">
+                </div>
+                <div class="col-md-4 p-4">
+                    <h1 class='text-center fs-3 p-2 border border-5 rounded-pill border-warning bg-success bg-gradient' id='puntajeActual'>Jugador: Jhosebro</h1>
+                </div>
             </div>
-            <div class="col-md-12">
-                <h1 class="titulo text-center">Aplasta el topo</h1>
+            <div class="row p-3 ">
+                <div class="col-md-4">
+                </div>
+                <div class="col-md-4 border border-5 rounded-pill border-warning bg-success bg-gradient">
+                    <h1 class="text-center">
+                        Aplasta el topo
+                    </h1>
+                </div>
+                <div class="col-md-4">
+                </div>
             </div>
-            <div class="col-md-12 " id="dibujandoTopos">
+            <div class="row p-10" id="dibujandoTopos">
             </div>
         </div>
     </div>
