Feature aparicion aleatoria de los topos agregada

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -33,8 +33,11 @@
                 <div class="col-md-4">
                 </div>
             </div>
-            <div class="row p-10" id="dibujandoTopos">
+
+            <div class="row p-10">
+            <div class="contenedor border border-5 border-warning " id="dibujandoTopos"></div>
             </div>
+
         </div>
     </div>
     <script src="lib/jquery/jquery-3.6.0.js"></script>
