Feature Tiempo y mensajes de perdiste o ganaste

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -16,7 +16,8 @@
             <div class="row">
                 <div class="col-md-4 p-4" id="puntaje">
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4 p-4" id="tiempo">
+                    <h1 class='text-center fs-3 p-2 border border-5 rounded-pill border-warning bg-success bg-gradient' id='tiempoActual'>Tiempo: 60</h1>
                 </div>
                 <div class="col-md-4 p-4">
                     <h1 class='text-center fs-3 p-2 border border-5 rounded-pill border-warning bg-success bg-gradient' id='puntajeActual'>Jugador: Jhosebro</h1>
